--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,8 @@
 
 <p>This solution obviously borrows from both Homebrew and Nix.  What I think is new here is the idea of expanding the definition of an container image with FileSets and making this be fundamentally decentralized.  We also need to ensure that the easy to approach spirit of Dockerfile isn&rsquo;t lost.  If we do this right we can make images much easier to efficiently create, verify, update and manage.</p>
 
+<p>Ping back to me on twitter (<a href="http://www.twitter.com/jbeda">@jbeda</a>) or we can talk over on <a href="https://news.ycombinator.com/item?id=9814131">Hacker News</a></p>
+
 <p>(Thanks to <a href="https://twitter.com/kelseyhightower">Kelsey Hightower</a> for reviewing an earlier version of this post.)</p>
 <div class="footnotes">
 
