Put comment in about PaaS

--- a/public/post.html
+++ b/public/post.html
@@ -148,6 +148,8 @@
 </ul></li>
 </ul>
 
+<p>PaaS systems often help to bring this all together in an easy way.  Systems like <a href="http://www.openshift.org/">OpenShift 3</a>, <a href="http://deis.io/">Deis</a>, or <a href="https://flynn.io">Flynn</a> build on top of some of the independent systems above.  Other PaaS such as <a href="https://www.heroku.com/">Heroku</a>, <a href="https://cloud.google.com/appengine/docs">Google App Engine</a> or <a href="https://www.cloudfoundry.org/">Cloud Foundry</a> are more vertically integrated without the component layers being broken out in a well supported way.</p>
+
 <p>Next on the list would be to talk about continuous integration/continuous deployment (CI/CD) systems and systems for communicating between microservices (RPC and queues). But I think I&rsquo;ll stop here.  If this is useful (or if you think I&rsquo;m missing anything huge) please let me know via <a href="https://www.twitter.com/jbeda">twitter</a>.</p>
 <div class="footnotes">
 
