Typo fix.  Boo\!

--- a/public/post.html
+++ b/public/post.html
@@ -71,7 +71,7 @@
 <ul>
 <li>Examples include <a href="https://coreos.com/using-coreos/">CoreOS</a>, <a href="http://www.projectatomic.io/">Red Hat Project Atomic</a>, <a href="https://developer.ubuntu.com/en/snappy/">Ubuntu Snappy</a>, and <a href="http://rancher.com/rancher-os/">Rancher OS</a>.</li>
 </ul></li>
-<li><strong>Boostrapping system</strong>.  Assuming you are starting with a generic VM image or bare metal hardware, something has to be able to bootstrap those machines and get them running as productive members of the cluster.  This becomes very important as you are dealing with lots machines that come and go as hardware fails.
+<li><strong>Bootstrapping system</strong>.  Assuming you are starting with a generic VM image or bare metal hardware, something has to be able to bootstrap those machines and get them running as productive members of the cluster.  This becomes very important as you are dealing with lots machines that come and go as hardware fails.
 
 <ul>
 <li><a href="https://bosh.io/docs">Cloud Foundry BOSH</a> was created to do this for Cloud Foundry but is seeing new life as an independent product.</li>
