Add pointer to OpenContrail

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
 
 <ul>
 <li>Without a networking solution, orchestration systems must allocate and enforce port assignment as ports per host are a shared resource.</li>
-<li>Examples here include <a href="https://github.com/coreos/flannel">CoreOS Flannel</a>, <a href="http://weave.works/">Weave</a>, <a href="http://www.projectcalico.org/">Project Calico</a>, and <a href="https://github.com/docker/libnetwork">Docker libnetwork</a> (not ready for production yet).</li>
+<li>Examples here include <a href="https://github.com/coreos/flannel">CoreOS Flannel</a>, <a href="http://weave.works/">Weave</a>, <a href="http://www.projectcalico.org/">Project Calico</a>, and <a href="https://github.com/docker/libnetwork">Docker libnetwork</a> (not ready for production yet).  I&rsquo;ve also been pointed to <a href="http://www.opencontrail.org/">OpenContrail</a> but haven&rsquo;t looked deeply.</li>
 </ul></li>
 <li><strong>Container Storage Systems.</strong> As users move past special &ldquo;pet&rdquo; hosts storage becomes more difficult.
 
