Mention Azure container service

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 <ul>
 <li>This is a super hot area of interest with lots of innovation.</li>
 <li>Open source deployable examples include <a href="http://kubernetes.io/">Kubernetes</a>, <a href="https://docs.docker.com/swarm/">Docker Swarm</a>, and <a href="http://mesos.apache.org/">Apache Mesos</a>.</li>
-<li>Hosted systems include <a href="https://cloud.google.com/container-engine/">Google Container Engine (GKE)</a> (based on Kubernetes), <a href="https://mesosphere.com/product/">Mesosphere DCOS</a> and <a href="https://aws.amazon.com/ecs/">Amazon EC2 Container Service (ECS)</a>.</li>
+<li>Hosted systems include <a href="https://cloud.google.com/container-engine/">Google Container Engine (GKE)</a> (based on Kubernetes), <a href="https://mesosphere.com/product/">Mesosphere DCOS</a> and <a href="https://aws.amazon.com/ecs/">Amazon EC2 Container Service (ECS)</a>.  Recently announced is the <a href="https://azure.microsoft.com/en-us/blog/azure-container-service-now-and-the-future/">Microsoft Azure Container Service</a> based on Mesosphere DCOS and Docker Swarm.</li>
 </ul></li>
 <li><strong>Orchestration Config.</strong> Many of the orchestration systems have small granular objects.  Creating and parameterizing these by hand can be difficult.  In this context, an orchestration config system can take higher level description and compile them down to the nuts and bolts that the orchestration systems works with.
 
