Add pointer to Graphite

--- a/public/post.html
+++ b/public/post.html
@@ -157,7 +157,7 @@
 <ul>
 <li>A modern monitoring solution is characterized by its ability to deal with a wide set of metrics along with flexible vector math necessary to do complex aggregations and tests.  Time series data should be sampled frequently (30-60s or less), stored for a long time and be easily explored and graphed.  A good monitoring system not only lets you know when things are down but also is a critical debugging tool to know where and how things are broken.</li>
 <li>For open systems, <a href="http://prometheus.io/">Prometheus</a> looks <em>very</em> interesting in this area.<br /></li>
-<li>There are also ways to break this apart into smaller parts such as <a href="http://grafana.org/">Grafana</a> as a frontend backed by a dedicated time series database like <a href="https://influxdb.com/">InfluxDB</a> or <a href="http://opentsdb.net/">OpenTSDB</a>.</li>
+<li>There are also ways to break this apart into smaller parts such as <a href="http://grafana.org/">Grafana</a> as a frontend backed by a dedicated time series database like <a href="https://influxdb.com/">InfluxDB</a> or <a href="http://opentsdb.net/">OpenTSDB</a>. I&rsquo;ve also had multiple people point to <a href="http://graphite.readthedocs.org/en/latest/">Graphite</a> in this space also.</li>
 <li><a href="https://github.com/kubernetes/heapster">Heapster</a> is a container specific monitoring system that surfaces data collected by <a href="https://github.com/google/cadvisor">cAdvisor</a>.</li>
 <li>There are hosted systems such as <a href="https://cloud.google.com/monitoring/">Google Cloud Monitoring</a> and <a href="https://signalfx.com/">SignalFx</a>.</li>
 <li>I&rsquo;m not an expert here so I&rsquo;m sure I&rsquo;m missing some of the awesome stuff going on in this area.</li>
